--- a/test12.html
+++ b/test12.html
@@ -1,30 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    <h1>BMI Calculator</h1>
-    <hr>
-    น้ำหนักตัว (Kg.)
-    <br><br>
-    <input type="number" name="" id="weight">
-    <br><br>
-    ส่วนสูง (Cm.)
-    <br><br>
-    <input type="number" name="" id="height">
-    <br><br>
-    <button id="calBMI">คำนวณ</button>
-    <br><br>
-    BMI
-    <br>
-    <span id="bmiValue">0</span>
-    <br><br>
-    <span id="bmiResult">การแปลผล BMI</span>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@1,200;1,500&display=swap');
+        #head {
+            text-align: center;
+            border: 1px;
+        }
+        
+        .border{
+            background-color: rgb(102, 178, 184);
+            width: 75%;
+            margin: auto;
+            font-family: 'Bai Jamjuree', sans-serif;
+            font-size: 25px;
+        }
+        
+        #weight{
+            height: 30px;
+            width: 300px;
+            border: none;
+            border-bottom: 2px solid black;
+            background: none;
+        }
 
+        #height{
+            height: 30px;
+            width: 300px;
+            border: none;
+            border-bottom: 2px solid black;
+            background: none;
+        }
+
+        #calBMI{
+            height: 50px;
+            width: 300px;
+            font-size: large;
+        }
+
+        body{
+            background-color: blanchedalmond;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="border">
+        <div id="head">
+            <h1>BMI Calculator</h1>
+            <hr>
+            น้ำหนักตัว (Kg.)
+            <br><br>
+            <input type="number" name="" id="weight">
+            <br><br>
+            ส่วนสูง (Cm.)
+            <br><br>
+            <input type="number" name="" id="height">
+            <br><br>
+            <button id="calBMI">คำนวณ ↓</button>
+            <br><br>
+            BMI
+            <br>
+            <span id="bmiValue">0</span>
+            <br><br>
+            <span id="bmiResult">การแปลผล BMI</span>
+        </div>
+    </div>
     <script src="./js/scrip12.js"></script>
 </body>
+
 </html>
